--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-sloc",
   "version": "0.0.0",
   "description": "A port of the grunt-sloc plugin for gulp",
-  "main": "sloc.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
