--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "gulp-mocha": "~0.1.3",
     "expect.js": "~0.2.0",
-    "gulp-jshint": "~1.3.3",
-    "mocha": "~1.16.2"
+    "gulp-jshint": "<=1.3.3",
+    "mocha": "~1.16.2",
+    "gulp-load-tasks": "~0.1.0"
   }
 }
