--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A port of the grunt-sloc plugin for gulp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/gulp ci"
   },
   "repository": {
     "type": "git",
@@ -24,13 +24,17 @@
     "sloc": "0.0.4",
     "gulp": "~3.2.2",
     "gulp-util": "~2.2.5",
-    "event-stream": "~3.0.20"
+    "event-stream": "~3.0.20",
+    "underscore": "~1.5.2",
+    "mkdirp": "~0.3.5"
   },
   "devDependencies": {
     "gulp-mocha": "~0.1.3",
     "expect.js": "~0.2.0",
     "gulp-jshint": "<=1.3.3",
     "mocha": "~1.16.2",
-    "gulp-load-tasks": "~0.1.0"
+    "gulp-load-tasks": "~0.1.0",
+    "jshint-stylish": "~0.1.4",
+    "gulp-cat": "~0.1.1"
   }
 }
