--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "mocha": "~1.16.2",
     "gulp-load-tasks": "~0.1.0",
     "jshint-stylish": "~0.1.4",
-    "gulp-cat": "~0.1.1"
+    "strip-ansi": "~0.1.1"
   }
 }
