--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "mkdirp": "~0.3.5"
   },
   "devDependencies": {
-    "gulp-mocha": "~0.1.3",
     "expect.js": "~0.2.0",
-    "gulp-jshint": "<=1.3.3",
     "mocha": "~1.16.2",
     "gulp-load-tasks": "~0.1.0",
     "jshint-stylish": "~0.1.4",
-    "strip-ansi": "~0.1.1"
+    "strip-ansi": "~0.1.1",
+    "gulp-mocha": "~0.2.0",
+    "gulp-jshint": "~1.3.4"
   }
 }
