--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/oddjobsman/gulp-sloc",
   "dependencies": {
     "sloc": "0.0.4",
-    "gulp": "~3.2.2",
+    "gulp": "~3.2.5",
     "gulp-util": "~2.2.5",
     "event-stream": "~3.0.20",
     "mkdirp": "~0.3.5",
@@ -30,11 +30,13 @@
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
-    "mocha": "~1.16.2",
     "gulp-load-tasks": "~0.1.0",
     "jshint-stylish": "~0.1.4",
     "strip-ansi": "~0.1.1",
-    "gulp-mocha": "~0.2.0",
-    "gulp-jshint": "~1.3.4"
+    "gulp-jshint": "~1.3.4",
+    "event-stream": "~3.1.0",
+    "gulp": "~3.3.0",
+    "gulp-mocha": "~0.3.0",
+    "mocha": "~1.17.0"
   }
 }
