--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "homepage": "https://github.com/oddjobsman/gulp-sloc",
   "dependencies": {
     "sloc": "0.0.4",
-    "gulp": "~3.2.5",
     "gulp-util": "~2.2.5",
-    "event-stream": "~3.0.20",
     "mkdirp": "~0.3.5",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "gulp": "~3.3.0",
+    "event-stream": "~3.1.0"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
