--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A port of the grunt-sloc plugin for gulp",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/gulp ci"
+    "test": "node_modules/.bin/gulp ci",
+    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,11 @@
   "homepage": "https://github.com/oddjobsman/gulp-sloc",
   "dependencies": {
     "sloc": "0.0.4",
-    "gulp-util": "~2.2.5",
     "mkdirp": "~0.3.5",
     "lodash": "~2.4.1",
-    "gulp": "~3.3.0",
-    "event-stream": "~3.1.0"
+    "event-stream": "~3.1.0",
+    "gulp-util": "~2.2.12",
+    "gulp": "~3.4.0"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
@@ -37,6 +38,9 @@
     "event-stream": "~3.1.0",
     "gulp": "~3.3.0",
     "gulp-mocha": "~0.3.0",
-    "mocha": "~1.17.0"
+    "mocha": "~1.17.0",
+    "mocha-lcov-reporter": "0.0.1",
+    "istanbul": "~0.2.3",
+    "coveralls": "~2.6.1"
   }
 }
