--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "strip-ansi": "~0.1.1",
     "gulp-jshint": "~1.3.4",
     "event-stream": "~3.1.0",
-    "gulp": "~3.3.0",
     "gulp-mocha": "~0.3.0",
     "mocha": "~1.17.0",
     "mocha-lcov-reporter": "0.0.1",
     "istanbul": "~0.2.3",
-    "coveralls": "~2.6.1"
+    "coveralls": "~2.6.1",
+    "gulp": "~3.4.0"
   }
 }
