--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "ssh://git@github.com:oddjobsman/gulp-sloc.git"
   },
+  "engines": {
+    "node": ">=0.9"
+  },
   "keywords": [
     "gulpplugin",
     "sloc"
@@ -26,8 +29,7 @@
     "mkdirp": "~0.3.5",
     "lodash": "~2.4.1",
     "event-stream": "~3.1.0",
-    "gulp-util": "~2.2.12",
-    "gulp": "~3.4.0"
+    "gulp-util": "~2.2.12"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
