--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
   },
   "homepage": "https://github.com/oddjobsman/gulp-sloc",
   "dependencies": {
-    "mkdirp": "~0.3.5",
-    "lodash": "~2.4.1",
-    "event-stream": "~3.1.0",
-    "gulp-util": "~2.2.12",
-    "sloc": "0.0.5"
+    "mkdirp": "^0.4.0",
+    "lodash": "^2.4.1",
+    "sloc": "0.0.7",
+    "event-stream": "^3.1.2",
+    "gulp-util": "^2.2.14"
   },
   "devDependencies": {
-    "expect.js": "~0.2.0",
-    "jshint-stylish": "~0.1.4",
-    "strip-ansi": "~0.1.1",
-    "gulp-jshint": "~1.3.4",
-    "event-stream": "~3.1.0",
-    "mocha": "~1.17.0",
+    "strip-ansi": "^0.2.0",
     "mocha-lcov-reporter": "0.0.1",
-    "istanbul": "~0.2.3",
-    "gulp-mocha": "~0.4.1",
-    "gulp-load-plugins": "~0.2.0",
-    "gulp": "~3.5.1",
-    "coveralls": "~2.7.1",
-    "gulp-plumber": "~0.5.6"
+    "expect.js": "^0.3.1",
+    "event-stream": "^3.1.2",
+    "jshint-stylish": "^0.1.5",
+    "gulp-mocha": "^0.4.1",
+    "gulp-plumber": "^0.6.1",
+    "mocha": "^1.18.2",
+    "istanbul": "^0.2.7",
+    "gulp-load-plugins": "^0.5.0",
+    "coveralls": "^2.10.0",
+    "gulp-jshint": "^1.5.5",
+    "gulp": "^3.6.2"
   }
 }
